--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,6 @@
     <string name="invalid_username">Not a valid username</string>
     <string name="invalid_password">Password must be >5 characters</string>
     <string name="login_failed">"Login failed"</string>
+    <string name="permission_required">Accessibility permission is required for the app to function properly.</string>
+    <string name="permission_granted">Permission is granted. The app can track your typing speed now.</string>
 </resources>
