--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,5 +16,24 @@
     <string name="title_charts">Charts</string>
     <string name="title_settings">Settings</string>
     <!-- TODO: Remove or change this placeholder text -->
+
+    <!-- Consent form -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="con_title">Consent to Participate</string>
+    <string name="con_intro">Welcome to Circog! This app is part of a scientific study, which focuses on detecting users\' circadian rhythms, i.e. performance variations throughout the day. From time to time, Circog will prompt you to perform a sequence of concentration tasks. If you do not receive a notification within 24hours after installation, please let us know.</string>
+    <string name="con_portrait">Portrait of the researchers that organise the study: Tilman Dingler and Tonja Maschulla</string>
+    <string name="con_contact">"This study is conducted by Tilman Dingler and Tonja Maschulla at the University of Stuttgart. In case you have questions, please contact us at userstudies@hcilab.org."</string>
+    <string name="con_data">"By pressing accept, you allow Circog to anonymously collect app usage data. All data will be securely stored on a server in compliance with European data protection laws (BGBl. I S. 2325). No phone content or sensor data will be collected. Logs will only be uploaded when you are connected to WiFi to prevent any upload cost. Your data will only be used in the context of our research and will never be shared with third parties. You can withdraw from the study at any moment by simply uninstalling the app. Thanks! And have fun with the tasks!</string>
+    <string name="con_btn_give_consent">Accept</string>
+    <string name="con_btn_not_now">Not Now</string>
+    <string name="con_could_not_register">No connection to our servers - are you connected to the Internet?</string>
+    <string name="title_activity_consent">ConsentActivity</string>
+    <!-- Strings used for fragments for navigation -->
+    <string name="first_fragment_label">First Fragment</string>
+    <string name="second_fragment_label">Second Fragment</string>
+    <string name="next">Next</string>
+    <string name="previous">Previous</string>
+
+    <string name="hello_first_fragment">Hello first fragment</string>
+    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
 </resources>
