--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,13 +9,16 @@
     <string name="invalid_username">Not a valid username</string>
     <string name="invalid_password">Password must be >5 characters</string>
     <string name="login_failed">"Login failed"</string>
-    <string name="permission_required">Accessibility permission is required for the app to function properly.</string>
-    <string name="permission_granted">Permission is granted. The app can track your typing speed now.</string>
-    <string name="title_activity_chart">ChartActivity</string>
+
+    <!-- Permissions -->
+    <string name="accessibility_permission_required">Accessibility permission is required for the app to function properly.</string>
+    <string name="accessibility_permission_granted">Accessibility permission is granted. The app can track your typing speed now.</string>
+    <string name="battery_optimization_prompt">Battery optimization should NOT be enabled.</string>
+
+    <!-- Menu -->
     <string name="title_home">Home</string>
     <string name="title_charts">Charts</string>
     <string name="title_settings">Settings</string>
-    <!-- TODO: Remove or change this placeholder text -->
 
     <!-- Consent form -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
@@ -23,7 +26,7 @@
     <string name="con_intro">Welcome to Alertness Monitor! This app is part of a scientific study, which focuses on tracking users\' keyboard usage during the day. During the first week, the app will send you a notification every day to complete a brief questionnaire about how you have experienced your own keyboard usage. The second week you will also be shown an overview of the data that the app has collected and you will also be asked to answer the same daily questionnaire. If you do not receive a notification within 24hours after installation, please let us know.</string>
     <string name="con_portrait">Portrait of the researchers that organise the study: Tilman Dingler and Tonja Maschulla</string>
     <string name="con_contact">"This study is conducted by Katri Säily and Aku Visuri at the University of Oulu. In case you have questions, please contact us at ..."</string>
-    <string name="con_data">"By pressing accept, you allow Alertness Monitor to anonymously collect app and keyboard usage data. All data will be securely stored on a server in compliance with European data protection laws (BGBl. I S. 2325). All the keyboard data will be encrypted before sending it to the server so nobody can see exactly what you have written. Logs will only be uploaded when you are connected to WiFi to prevent any upload cost. Your data will only be used in the context of our research and will never be shared with third parties. You can withdraw from the study at any moment by simply uninstalling the app. Thanks! And have fun with the tasks!</string>
+    <string name="con_data">By pressing accept, you allow Alertness Monitor to anonymously collect app and keyboard usage data. All data will be securely stored on a server in compliance with European data protection laws (BGBl. I S. 2325). All the keyboard data will be encrypted before sending it to the server so nobody can see exactly what you have written. Logs will only be uploaded when you are connected to WiFi to prevent any upload cost. Your data will only be used in the context of our research and will never be shared with third parties. You can withdraw from the study at any moment by simply uninstalling the app. Thanks! And have fun with the tasks!</string>
     <string name="con_btn_give_consent">Accept</string>
     <string name="con_btn_not_now">Not Now</string>
     <string name="con_could_not_register">No connection to our servers - are you connected to the Internet?</string>
@@ -55,12 +58,26 @@
     <string name="title_activity_settings">SettingsActivity</string>
 
     <!-- Preference Titles -->
-    <string name="messages_header">Messages</string>
-    <string name="sync_header">Sync</string>
+    <string name="data_header">Data</string>
+    <string name="pref_header">Preference settings</string>
+    <string name="permissions_header">Permissions</string>
+    <string name="limit_mobile_data_usage">Limit mobile data usage</string>
+    <string name="network_prefs">Specify network preferences for data updates</string>
+    <string name="show_sleep_data">Show sleep data</string>
+    <string name="battery_optimization_options">Battery optimization</string>
+    <string name="accessibility_pref">Accessibility permission granted</string>
+    <string name="keyboard_data_to_show">Choose typing data to show on graph</string>
+    <string name="battery_opt_on_prompt">Battery optimization should be unabled</string>
+    <string name="battery_opt_off_propmt">Battery optimization is off (this is preferred)</string>
+    <string name="mobile_data_usage_off_prompt">It is not recommended to limit mobile data usage</string>
 
-    <!-- Messages Preferences -->
-    <string name="signature_title">Your signature</string>
-    <string name="reply_title">Default reply action</string>
+    <!-- Pref keys -->
+    <string name="keyboard_data_key">keyboard_data_selections</string>
+    <string name="mobile_data_key">limit_mobile_data_usage</string>
+    <string name="access_permission_key">accessibility_permission_boolean</string>
+    <string name="battery_opt_key">battery_optimization</string>
+    <string name="sleep_data_key">show_sleep_data</string>
+
 
     <!-- Sync Preferences -->
     <string name="sync_title">Sync email periodically</string>
