--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -99,10 +99,12 @@
     <string name="battery_opt_on_prompt">Battery optimization is enabled</string>
     <string name="battery_opt_off_prompt">Battery optimization is disabled</string>
     <string name="mobile_data_usage_off_prompt">It is not recommended to limit mobile data usage</string>
-    <string name="accessibility_permission_change">Accessibility permission should be enabled for the app to run as intended. Click here if you wish to make changes.</string>
+    <string name="accessibility_permission_change">Accessibility permission should be enabled for the app to run as intended. Click here and enable accessibility_service.</string>
     <string name="click_here_to_make_changes">Click here to make changes</string>
     <string name="battery_opt_snackbar_title">Battery optimization</string>
     <string name="battery_opt_snackbar_msg">Click ok to disable battery optimization in settings</string>
+    <string name="contact_info">In case of issues, please contact: \nkatri.saily@oulu.fi</string>
+    <string name="help">Help</string>
 
     <!-- Pref keys -->
     <string name="notifications_header_key">notifications_header</string>
@@ -113,6 +115,7 @@
     <string name="sleep_data_key">show_sleep_data</string>
     <string name="network_pref_key">network_prefs</string>
     <string name="notifications_key">notifications_enabled</string>
+
 
     <!-- Permissions -->
     <string name="accessibility_permission_required">Accessibility permission is required for the app to function properly.</string>
@@ -127,7 +130,7 @@
     <string name="attachment_summary_on">Automatically download attachments for incoming emails
     </string>
     <string name="attachment_summary_off">Only download attachments when manually requested</string>
-    <string name="to_view_your_sleep_data_you_need_to_log_in_to_your_fitbit_account">To view your sleep data, you need to log in to your Fitbit account</string>
+    <string name="to_view_your_sleep_data_you_need_to_log_in_to_your_fitbit_account">To view your sleep data, you need to log in to your Fitbit account.</string>
     <string name="fitbit_login">Fitbit Login</string>
     <string name="sleep_data_title">Last night\'s sleep</string>
     <string name="speed_avg">Average speed</string>
@@ -139,9 +142,11 @@
     <string name="home_sleep_data_not_found_title">Sleep data could not be found</string>
     <string name="home_sleep_data_not_found_content">Sleep data could not be found for this date, please try another date.</string>
     <string name="home_keyboard_data_not_found_title">Data could not be found for this date</string>
+    <string name="home_keyboard_data_not_found_wait_for_update">If you have just started using the app, \n please wait 15-20 minutes \n for the data to update.</string>
     <string name="home_keyboard_data_not_found_content">Please make sure that accessibility settings are turned on. You can go to settings by pressing the button below.</string>
     <string name="home_keyboard_data_not_found_btn">Settings</string>
-
+    <string name="home_keyboard_wpm_stats_faster_than_avg">You were faster than \n users on average!</string>
+    <string name="home_keyboard_wpm_stats_slower_than_avg">You were slower than \n users on average.</string>
     <!-- Likert scale options -->
     <string name="likert_1_1">1 (significantly less)</string>
     <string name="likert_1_2">2 (less)</string>
