--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,7 +20,7 @@
     <string name="con_title">Consent to Participate</string>
     <string name="con_intro">Welcome to TypeAware! This app is part of a scientific study, which focuses on tracking users\' smartphone typing behaviour during the day. During the first week, the app will send you a notification every day to complete a brief questionnaire about how you have experienced your own typing behaviour, after which you can take a look at the data collected by the app. On the second week of the study you will always be shown an overview of the data that the app has collected and you will also be asked to answer a daily questionnaire. If you do not receive a notification or a daily questionnaire within 24hours after installation, please let us know.</string>
     <string name="con_contact">"This study is conducted by Katri Säily and Aku Visuri at the University of Oulu. In case you have questions, please contact us at katri.saily@oulu.fi"</string>
-    <string name="con_data">By pressing accept, you allow TypeAware to anonymously collect app and keyboard usage data. All data will be securely stored on a server in compliance with European data protection laws (BGBl. I S. 2325). All the keyboard data will be encrypted before sending it to the server so nobody can see exactly what you have written. Your data will only be used in the context of our research and will never be shared with third parties. You can withdraw from the study at any moment by simply uninstalling the app. Thanks! And have fun with learning more about your typing behaviour!</string>
+    <string name="con_data">By pressing accept, you allow TypeAware to anonymously collect app and keyboard usage as well as sleep data. All data will be securely stored on a server in compliance with European data protection laws (BGBl. I S. 2325). All the keyboard data will be encrypted before sending it to the server so nobody can see exactly what you have written. Your data will only be used in the context of our research and will never be shared with third parties. You can withdraw from the study at any moment by simply uninstalling the app. Thanks! And have fun with learning more about your typing behaviour!</string>
     <string name="con_btn_give_consent">Accept</string>
     <string name="con_btn_not_now">Not Now</string>
     <string name="con_could_not_register">No connection to our servers - are you connected to the Internet?</string>
@@ -81,6 +81,7 @@
     <string name="questionnaire_explanation_open">Write your answer here</string>
     <string name="submit_btn">Submit</string>
     <string name="continue_btn">Continue</string>
+    <string name="click_to_answer">Click here to answer today\'s questionnaire</string>
 
     <!-- Preference Titles and prompts-->
     <string name="notifications_header">Notifications</string>
