--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -173,7 +173,13 @@
     <string name="likert_5">5 (somewhat agree)</string>
     <string name="likert_6">6 (agree)</string>
     <string name="likert_7">7 (strongly agree)</string>
-
+    <string name="bedtime">Bedtime</string>
+    <string name="wakeup">Wakeup</string>
+    <string name="time_asleep">Time asleep</string>
+    <string name="words_per_minute">Words per minute</string>
+    <string name="yes">Yes</string>
+    <string name="no">No</string>
+    <string name="please_explain_here">Please explain here.</string>
 
 
 </resources>
